wordpress.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: "nginx"
  rules:
    - host: "wordpress.10.0.100.99.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
